@@ -2,7 +2,7 @@ Package: ma
 Type: Package
 Title: Model Averaging
 Version: 1.0-1
-Date: 2017-04-12
+Date: 2017-04-13
 Imports: quadprog
 Suggests: crs, np, rgl
 Author: Jeffrey S. Racine
