@@ -25,7 +25,7 @@ lm.ma.formula <- function(formula,
                           deriv.order=1,
                           K.mat=NULL,
                           knots=FALSE,
-                          lambda=1e-02,
+                          c.lambda=1e-02,
                           ma.weights=NULL,
                           method=c("jma","mma"),
                           rank.vec=NULL,
@@ -62,7 +62,7 @@ lm.ma.formula <- function(formula,
                        deriv.order=deriv.order,
                        K.mat=K.mat,
                        knots=knots,
-                       lambda=lambda,
+                       c.lambda=c.lambda,
                        ma.weights=ma.weights,
                        method=method,
                        rank.vec=rank.vec,
@@ -106,7 +106,7 @@ lm.ma.default <- function(y=NULL,
                           deriv.order=1,
                           K.mat=NULL,
                           knots=FALSE,
-                          lambda=1e-02,
+                          c.lambda=1e-02,
                           ma.weights=NULL,
                           method=c("jma","mma"),
                           rank.vec=NULL,
@@ -148,7 +148,7 @@ lm.ma.default <- function(y=NULL,
                      degree.min=degree.min,
                      deriv.index=deriv.index,
                      degree.max=degree.max,
-                     lambda=lambda,
+                     c.lambda=c.lambda,
                      segments.max=segments.max,
                      knots=knots,
                      S=S,
@@ -182,7 +182,7 @@ lm.ma.default <- function(y=NULL,
                          degree.min=degree.min,
                          deriv.index=deriv.index,
                          degree.max=degree.max,
-                         lambda=lambda,
+                         c.lambda=c.lambda,
                          segments.max=segments.max,
                          knots=knots,
                          S=S,
@@ -234,7 +234,7 @@ lm.ma.default <- function(y=NULL,
                                   degree.min=degree.min,
                                   deriv.index=deriv.index,
                                   degree.max=degree.max,
-                                  lambda=lambda,
+                                  c.lambda=c.lambda,
                                   segments.max=segments.max,
                                   knots=knots,
                                   S=S,
@@ -302,7 +302,7 @@ lm.ma.default <- function(y=NULL,
                                  degree.min=degree.min,
                                  deriv.index=deriv.index,
                                  degree.max=degree.max,
-                                 lambda=lambda,
+                                 c.lambda=c.lambda,
                                  segments.max=segments.max,
                                  knots=knots,
                                  S=S,
@@ -344,7 +344,7 @@ lm.ma.default <- function(y=NULL,
                                      degree.min=degree.min,
                                      deriv.index=NULL,
                                      degree.max=degree.max,
-                                     lambda=lambda,
+                                     c.lambda=c.lambda,
                                      segments.max=segments.max,
                                      knots=knots,
                                      S=S,
@@ -412,7 +412,7 @@ lm.ma.default <- function(y=NULL,
                                           degree.min=degree.min,
                                           deriv.index=NULL,
                                           degree.max=degree.max,
-                                          lambda=lambda,
+                                          c.lambda=c.lambda,
                                           segments.max=segments.max,
                                           knots=knots,
                                           S=S,
@@ -437,7 +437,7 @@ lm.ma.default <- function(y=NULL,
                                           degree.min=degree.min,
                                           deriv.index=NULL,
                                           degree.max=degree.max,
-                                          lambda=lambda,
+                                          c.lambda=c.lambda,
                                           segments.max=segments.max,
                                           knots=knots,
                                           S=S,
@@ -466,7 +466,7 @@ lm.ma.default <- function(y=NULL,
                                               degree.min=degree.min,
                                               deriv.index=NULL,
                                               degree.max=degree.max,
-                                              lambda=lambda,
+                                              c.lambda=c.lambda,
                                               segments.max=segments.max,
                                               knots=knots,
                                               S=S,
@@ -628,7 +628,7 @@ predict.lm.ma <- function(object,
                              deriv.index=object$deriv.index,
                              deriv.order=object$deriv.order,
                              degree.max=object$degree.max,
-                             lambda=object$lambda,
+                             c.lambda=object$c.lambda,
                              segments.max=object$segments.max,
                              knots=object$knots,
                              S=object$S,
@@ -835,7 +835,7 @@ lm.ma.Est <- function(y=NULL,
                       deriv.order=1,
                       K.mat=NULL,
                       knots=FALSE,
-                      lambda=1e-02,
+                      c.lambda=1e-02,
                       ma.weights=NULL,
                       method=c("jma","mma"),
                       rank.vec=NULL,
@@ -916,11 +916,12 @@ lm.ma.Est <- function(y=NULL,
         nrow.zeval.unique <- nrow(zeval.unique)
     }
 
+    lambda.vec <- NULL
     if(is.null(z)) {
         include <- NULL
     } else {
         include <- rep(1,num.z)
-        lambda.vec <- rep(lambda,num.z)
+        lambda.vec <- rep(c.lambda/num.obs,num.z)
     }
 
     if(is.null(degree.max)) {
@@ -1516,7 +1517,8 @@ lm.ma.Est <- function(y=NULL,
                 degree.min=degree.min,
                 deriv.index=deriv.index,
                 degree.max=degree.max,
-                lambda=lambda,
+                c.lambda=c.lambda,
+                lambda.vec=lambda.vec,
                 segments.max=segments.max,
                 knots=knots,
                 S=S,
